# microringlib

./: CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  demo6.py  demo_material_backends.py  demo_ring_modulator_eye.py  demo_sic_sfwm_photon_pairs.py  demo_wdm_8ch_filter_bank_with_spacing.py  pyproject.toml
.github/workflows/: ci.yml
docs/: STATE_OF_THE_ART.md
examples/: demo1.py  demo2_critical_coupling_metrics.py  demo3.py  demo4.py  demo5.py  demo_ai_inverse_design_random.py  demo_frequency_comb_toy.py  demo_kerr_bistability.py  demo_monte_carlo_tolerance.py
microringlib/: __init__.py  fast.py  materials.py  metrics.py  models.py  modes.py  nonlinear.py  plotting.py  quantum.py  transfer.py  utils.py
tests/: confest.py  test_additional.py  test_fast.py  test_invalid_inputs.py  test_materials.py  test_microringlib_full.py  test_models.py  test_modes.py  test_plotting.py  test_public_api.py  test_publishability_suite.py  test_smoke.py  test_transfer.py  test_utils.py
